--- a/options.html
+++ b/options.html
@@ -135,6 +135,7 @@
         </label>
         <div class="save-container">
             <button id="save" type="submit">Save</button>
+            <button id="exportBlacklist" type="button">Export Blacklist</button>
             <span id="save-message">Settings saved</span>
         </div>
     </form>
