Add thumbnail fixer option to restore uncropped images
Introduces a new 'Restore proper uncropped thumbnails' option in the extension settings and implements the ThumbnailFixer module to replace cropped Pixiv thumbnails with uncropped versions. Updates content and options scripts to support the new setting.

--- a/options.html
+++ b/options.html
@@ -133,6 +133,10 @@
             <input type="checkbox" id="removeSameAuthor">
             Remove recommendations from the same author
         </label>
+        <label>
+            <input type="checkbox" id="thumbnailFixer">
+            Restore proper uncropped thumbnails
+        </label>
         <div class="save-container">
             <button id="save" type="submit">Save</button>
             <button id="exportBlacklist" type="button">Export Blacklist</button>
